# cds

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/input/: sample.csv
experiments/: check_data.ipynb  check_result_lr.ipynb  check_result_mr.ipynb  historical_markov_regression.py  lr_historical.py  mr_histroical.py  regime_switching.ipynb  sample.ipynb
scripts/: data.py
src/: model.py
