[tool.poetry]
name = "cds"
version = "0.1.0"
description = ""
authors = ["Ryosuke Yamamoto"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0, <3.11"
numpyro = "^0.11.0"
scipy = ">=1.3, <1.9"
pandas = "^1.5.3"
numpy = "^1.22.0"
matplotlib = "^3.6.3"
scikit-learn = "^1.2.1"
sktime = "^0.16.0"
isort = "^5.12.0"
pytest = "^7.2.1"
statsmodels = "^0.13.5"
notebook = "^6.5.2"
pulp = "^2.7.0"
funsor = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
